# symsolver

./: pyproject.toml
examples/: state_space_model.ipynb
symsolver/: errors.py  symsolver.py
symsolver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_no_solution.py  test_single_step.py  test_symsolver.py  test_trivial_solution.py
