[tool.poetry]
name = "symsolver"
version = "0.1.0"
description = "Reexpress sympy equations"
authors = ["Jasper Chan <jasperchan515@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sympy = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
